--- a/Calculator/Calculate Yield.csproj
+++ b/Calculator/Calculate Yield.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Texte_Unitario</RootNamespace>
+    <RootNamespace>UnitTexting</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
